Fix mobile wrong width of /projects

--- a/components/ProjectsHeader/ProjectsHeader.module.scss
+++ b/components/ProjectsHeader/ProjectsHeader.module.scss
@@ -11,9 +11,15 @@
 }
 
 .projectsLogo {
-  width: 80%;
+  width: 70%;
+
+  @media screen and (min-width: 500px) {
+    width: 300px;
+    height: 120px;
+  }
 
   @media screen and (min-width: 800px) {
+    width: 300px;
     height: 120px;
     align-self: flex-start;
   }
