--- a/pages/projects/Projects.module.scss
+++ b/pages/projects/Projects.module.scss
@@ -6,7 +6,6 @@
 
   @media screen and (min-width: 700px) {
     margin: 100px auto 200px;
-    width: 300px;
   }
 }
 
